create doc level query from threat intel feed data index docs"
Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>