@@ -37,6 +37,7 @@ import org.opensearch.securityanalytics.model.Detector;
 import org.opensearch.test.OpenSearchTestCase;
 
 
+import static java.util.Collections.emptyList;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
@@ -71,7 +72,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 null,
                 DetectorMonitorConfig.getFindingsIndex("others_application"),
                 Collections.emptyMap(),
-                Collections.emptyList(),
+                emptyList(),
                 false
         );
         GetDetectorResponse getDetectorResponse = new GetDetectorResponse("detector_id123", 1L, RestStatus.OK, detector);
@@ -91,7 +92,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 "monitor_id1",
                 "monitor_name1",
                 "test_index1",
-                List.of(new DocLevelQuery("1","myQuery","fieldA:valABC", List.of())),
+                List.of(new DocLevelQuery("1","myQuery", emptyList(), "fieldA:valABC", List.of())),
                 Instant.now(),
                 "1234"
         );
@@ -107,7 +108,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 "monitor_id2",
                 "monitor_name2",
                 "test_index2",
-                List.of(new DocLevelQuery("1","myQuery","fieldA:valABC", List.of())),
+                List.of(new DocLevelQuery("1", "myQuery", Collections.emptyList(), "fieldA:valABC", List.of())),
                 Instant.now(),
                 "1234"
         );
@@ -193,7 +194,7 @@ public class FindingServiceTests extends OpenSearchTestCase {
                 null,
                 DetectorMonitorConfig.getFindingsIndex("others_application"),
                 Collections.emptyMap(),
-                Collections.emptyList(),
+                emptyList(),
                 false
         );
         GetDetectorResponse getDetectorResponse = new GetDetectorResponse("detector_id123", 1L, RestStatus.OK, detector);
